--- a/src/components/checkbox/_checkbox.scss
+++ b/src/components/checkbox/_checkbox.scss
@@ -16,10 +16,10 @@ material-checkbox {
     .material-ripple-container {
       position: absolute;
       display: block;
-      width: 70px;
-      height: 70px;
-      left: -(35 - $checkbox-width / 2);
-      top: -(35 - $checkbox-width / 2);
+      width: $checkbox-width * 3; 
+      height: $checkbox-width * 3;
+      left: -$checkbox-width;
+      top: -$checkbox-width;
     }
     .material-ripple {
       color: #0f9d58;
